--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+src/test/resources
+
 # Created by https://www.toptal.com/developers/gitignore/api/java,maven,eclipse,windows,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,maven,eclipse,windows,macos
 
