fix test - proper pdf compare

--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,30 @@
 			<artifactId>GUIUtil</artifactId>
 			<version>1.2.1</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/de.redsix/pdfcompare -->
+		<dependency>
+    		<groupId>de.redsix</groupId>
+    		<artifactId>pdfcompare</artifactId>
+    		<version>1.2.2</version>
+  			<scope>test</scope>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.9.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-launcher</artifactId>
+			<version>1.9.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
 			<version>5.9.3</version>
 			<scope>test</scope>
 		</dependency>
