exclude document files that keeps on failing for various issue.
DOCX_TestPage.docx : Terminating app due to uncaught exception
'NSInternalInconsistencyException', reason: 'API misuse: modification of
a menu's items on a non-main thread when the menu is part of the main
menu. Main menu contents may only be modified from the main thread.'

Extlst-test.pptx : pdf diff
exclusions: [
	{"page": 1, "x1": 113, "y1": 1425, "x2": 2755, "y2": 1890}
	]

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<dependencies>
   		<dependency>
   			<groupId>org.jodconverter</groupId>
-			<artifactId>jodconverter-local</artifactId>
+			<artifactId>jodconverter-local-lo</artifactId>
 			<version>4.4.7</version>
 		</dependency>
 		<dependency>
@@ -27,7 +27,12 @@
 			<artifactId>GUIUtil</artifactId>
 			<version>1.2.1</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>io.github.awidesky</groupId>
+			<artifactId>ProjectPath</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/de.redsix/pdfcompare -->
 		<dependency>
     		<groupId>de.redsix</groupId>
