--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,9 @@
 	<description>A Java application that convert various documents.</description>  
 
 	<properties>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
+		<docconv.jdk.version>21</docconv.jdk.version>
+		<maven.compiler.source>${docconv.jdk.version}</maven.compiler.source>
+		<maven.compiler.target>${docconv.jdk.version}</maven.compiler.target>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -20,7 +21,7 @@
   		<dependency>
   			<groupId>org.jodconverter</groupId>
 			<artifactId>jodconverter-local-lo</artifactId>
-			<version>4.4.7</version>
+			<version>4.4.8</version>
 		</dependency>
 		<dependency>
 			<groupId>io.github.awidesky</groupId>
@@ -91,8 +92,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>17</source>
-					<target>17</target>
+					<source>${docconv.jdk.version}</source>
+					<target>${docconv.jdk.version}</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
